tests/api/snapshots/api__webhook__issue_closed.snap
---
source: tests/api/webhook.rs
expression: "sent_messages[0].message"
---
[other user](https://github.com/other_user) has closed [issue #2](https://github.com/nesium/test_repo/issues/2) in [test_repo](https://github.com/nesium/test_repo)

**Title**: Item 1
