tests/api/snapshots/api__webhook__issue_comment_created.snap
---
source: tests/webhook/main.rs
expression: "format_issue_comment_created(&serde_json::from_str::<IssueCommentCreatedEvent>(contents).unwrap())"
---
[Codertocat 2](https://github.com/Codertocat_2) commented on [issue #1](https://github.com/Codertocat/Hello-World/issues/1) in [Hello-World](https://github.com/Codertocat/Hello-World)

**Title**: Spelling error in the README file
