tests/api/snapshots/api__webhook__release_prereleased.snap
---
source: tests/api/webhook.rs
expression: "sent_messages[0].message"
---
[github-actions[bot]](https://github.com/apps/github-actions) has published prerelease [Version 0.1.88](https://github.com/prose-im/prose-core-client/releases/tag/0.1.88) of [prose-core-client](https://github.com/prose-im/prose-core-client).

**Release Notes**:
```
- Move user info/profile repo access into domain service
- Merge user_info and user_profile folders
- Add vcard-temp parser
```
